gcc/testsuite/rust/rustc/ui/span/E0537.rs
#[cfg(unknown())] // { dg-error ".E0537." "" { target *-*-* } }
pub fn something() {}

pub fn main() {}

